# actix_rust

./: .env.example  Cargo.toml  compose.yml  makefile
certs/: cert.pem  key.pem
config/: default.json  development.json  test.json
migrations/: 20240615215003_users.up.sql  20240617172554_applications.down.sql  20240617172554_applications.up.sql  20240622191623_contents.down.sql  20240622191623_contents.up.sql
src/: main.rs
src/config/: mod.rs  sms.rs  smtp.rs
src/core/: app_state.rs  mod.rs
src/core/api_doc/: mod.rs
src/core/constants/: roles.rs
src/core/enums/: mod.rs
src/core/faker/: contents_table.rs  mod.rs  users_table.rs
src/core/mail/: email_queue.rs  mod.rs
src/core/sms/: mod.rs  sms_queue.rs
src/core/utils/: export_to_csv.rs  generate_opt.rs  jwt.rs  lazy_load.rs  mod.rs  transform_mobile.rs  validator.rs
src/core/utils/test_utils/: mod.rs
src/handlers/: health_checker.rs  mod.rs
src/handlers/admin/: mod.rs
src/handlers/admin/contents/: create_contents.rs  delete_content.rs  get_content_by_id.rs  get_contents.rs  mod.rs  update_contents.rs
src/handlers/admin/user/: create_user.rs  delete_user.rs  get_user_by_id.rs  get_users.rs  mod.rs  update_user.rs
src/handlers/auth/: login.rs  logout.rs  register.rs  verify.rs
src/handlers/project/profile/: get_profile.rs  mod.rs  update_profile.rs
src/middlewares/: auth_admin_middleware.rs  auth_middleware.rs  mod.rs
src/model/: mod.rs
src/model/application/: mod.rs
src/model/content/: mod.rs
src/model/user/: mod.rs
src/routes/: health_checker.rs
src/routes/admin/content/: mod.rs
src/routes/auth/: mod.rs
src/schema/: mod.rs
src/schema/response/: api_response.rs  api_response_collection.rs  api_response_error.rs  api_response_object.rs  mod.rs
(+8 files in other folders)
