[package]
name = "actix_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = {version = "4.9.0", features = ["openssl"]}
openssl = "0.10"
actix-web-actors = "4.3.1"
actix-web-lab = "0.22.0"
actix-web-validator = "6.0.0"
async-trait = "0.1.82"
base32 = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.0", features = ["json"] }
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
fake = "2.9.2"
features = "0.10.0"
futures-util = "0.3.30"
humantime = "2.1.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
lettre = "0.11.8"
lettre_email = "0.9.4"
log = "0.4.22"
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.10.6"
sanitize-filename = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha256 = "1.5.0"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "mysql", "sqlite", "chrono", "uuid", "json"] }
tokio = { version = "1.40.0", features = ["full"] }
totp-rs = "5.6.0"
twilio = "1.1.0"
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono", "uuid"] }
utoipa-rapidoc = { version = "4.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "4.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
mockall = "0.13.0"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "sqlite", "mysql", "chrono", "uuid", "json"] }
tokio = { version = "1.40.0", features = ["full"] }

